# OpsGraph

./: .env.example  .gitignore  AGENT_CONTEXT.md  API.md  ARCHITECTURE.md  DATABASE.md  INTEGRATIONS.md  PRD.md  PROMPT_TOOL.md  README.md  WORKFLOW.md  pyproject.toml  start-local.ps1
shared_core/: AGENT_CONTEXT.md  README.md  pyproject.toml
shared_core/agent_platform/: __init__.py  api_models.py  api_service.py  auditflow.py  auth_primitives.py  bootstrap.py  build_samples.py  checkpoints.py  demo_bootstrap.py  dispatcher.py  errors.py  events.py  fastapi_adapter.py  file_replay_store.py  langgraph_bridge.py  model_gateway.py  node_runtime.py  opsgraph.py  persistence.py  product_ci.py  replay.py  runtime.py  runtime_capabilities.py  service.py  shared.py  sqlalchemy_auth.py  sqlalchemy_stores.py  test_support.py  tool_executor.py  traces.py  workflow_definitions.py  workflow_registry.py  workflow_runner.py
shared_core/docs/: API.md  ARCHITECTURE.md  DATABASE.md  PROMPT_TOOL.md  WORKFLOW.md
shared_core/scripts/: sync_workspace_repos.ps1  vendor_into_repo.ps1
shared_core/tests/: test_api_service.py  test_checkpoint_and_events.py  test_demo_bootstrap.py  test_fastapi_adapter.py  test_file_replay_store.py  test_langgraph_bridge.py  test_model_gateway.py  test_node_runtime.py  test_persistence_and_dispatch.py  test_product_ci.py  test_prompt_assembly.py  test_runtime_catalog.py  test_sqlalchemy_stores.py  test_test_support.py  test_tool_executor.py  test_workflow_registry.py  test_workflow_runner.py  test_workflow_service.py  test_workflow_states.py
src/: README.md
(+71 files in other folders)
