[project]
name = "agent-platform-skeleton"
version = "0.1.0"
description = "Implementation skeleton for the shared platform, AuditFlow, and OpsGraph agent runtime."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11,<3.0",
    "sqlalchemy>=2.0,<3.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_platform*"]
